DPO-4827 adjust logic for commuter train track resolution logic